--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="score-container">
     <button id="retry-button" style="display: none;">Retry</button>
     </div> -->
+<!-- test -->
 
 
     <script src="scripts/InteractiveStory.js"></script>
